<resources>
    <string name="app_name">Listly</string>
    <string name="title_listly">Listly</string>
    <string name="edit_task_name">Task Name</string>
    <string name="edit_task_name_hint">Enter name for task</string>
    <string name="edit_date">Due Date</string>
    <string name="edit_task_note">Task Note</string>
    <string name="edit_task_note_hint">Enter note for task</string>
    <string name="edit_priority">Priority Level</string>
    <string name="edit_status">Status</string>
    <string name="edit_picture">Picture</string>
    <string name="delete_message">Are you want to delete this task?</string>
    <string name="string_ok">Okay</string>
    <string name="string_cancel">Cancel</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="status_done">Done</string>
    <string name="status_todo">TODO</string>
    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="status">
        <item>DONE</item>
        <item>TO-DO</item>
    </string-array>
</resources>
